--- a/main.css
+++ b/main.css
@@ -39,9 +39,9 @@ html {
   display: block;
   color: #FEFFFF;
   text-align: center;
-  padding: 14px 16px;
+  padding: 50px 50px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 45px;
 }
 #tabs ul li a:hover {
   background-color: rgba(0 0 0);
@@ -52,10 +52,10 @@ html {
   display: block;
   color: #FEFFFF;
   text-align: center;
-  padding: 14px 16px;
+  padding: 50px 50px;
   text-decoration: none;
-  font-size: 30px;
-  border: 2px solid #FEFFFF;
+  font-size: 45px;
+  border: 5px solid #FEFFFF;
   border-radius: 5px;
 
 }
@@ -64,7 +64,7 @@ html {
 .main-container .contact-btn {
   position: absolute;
    top: 55%;
-   left: 53%;
+   left: 65%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    background-color: rgba(0, 0, 0, 0);
@@ -94,10 +94,8 @@ html {
    width: 200px;
 }
 .main-container h1 {
-  position: absolute;
-  top: 40%;
-  left: 40%;
-  font-size: 70px;
+  text-align: center;
+  font-size: 5vw;
   font-weight: 900;
   color: #FEFFFF;
 }
@@ -177,7 +175,5 @@ button:hover, a:hover {
     font-size: 18px;
     margin-left: -20px;
 }
-@media only  screen and (min-device-width: 320px) and (max-device-width: 480px) and (max-device-height: 480px) and (orientation:portrait) {
-}
-@media only screen and (max-device-width: 320px) and (min-device-width: 320px) and (max-device-height: 480px) and (orientation: landscape) {
-}
+/*@media only screen and (min-device-width:) and (max-device-width:) and (max-device-height:) and (orientation:) {
+}*/
