--- a/main.css
+++ b/main.css
@@ -1,179 +1,52 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
 html {
-    padding: 0;
-}
-.home-bg {
-    background: url("background.png") no-repeat center fixed;
-    background-size: cover;
-}
-.resume-bg {
-  background: url("resume-bg.png") no-repeat center fixed;
-  background-size: cover;
-}
-.about-bg {
-  background: url("about-bg.png") no-repeat center fixed;
-  background-size: cover;
-}
-.contact-bg {
-  background: url("contact-bg.png") no-repeat center fixed;
-  background-size: cover;
-}
-#container {
-    background-color: #3AAFA9;
-    max-width: 70%;
-    margin: auto;
-    max-height: 100%;
-}
-
-/*Tabs*/
-#tabs ul {
-  list-style-type: none;
-  margin: 0;
+  position: relative;
   padding: 0;
-  overflow: hidden;
-  background-color: rgba(0, 0, 0 0);
+  width: 100%;
+  height: 100%;
 }
-#tabs ul li {
-  float: right;
+body{
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
-#tabs ul li a {
-  display: block;
-  color: #FEFFFF;
+.cover {
+  background: url("background.png") no-repeat center fixed;
+  background-size: cover;
+}
+#tabs{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   text-align: center;
-  padding: 50px 50px;
+}
+.nav-item a{
+  font-size: 2vw;
+  color: #FFF;
   text-decoration: none;
-  font-size: 45px;
 }
-#tabs ul li a:hover {
-  background-color: rgba(0 0 0);
-  border: 2px solid #FEFFFF;
-  border-radius: 5px;
+.main-container{
+  width: 100%;
+  height: 100%;
 }
-#tabs .active {
-  display: block;
-  color: #FEFFFF;
+.main-container h1{
   text-align: center;
-  padding: 50px 50px;
-  text-decoration: none;
-  font-size: 45px;
-  border: 5px solid #FEFFFF;
-  border-radius: 5px;
-
+  color: #FFF;
+  font-size: 4vw;
 }
-
-/*Buttons*/
-.main-container .contact-btn {
-  position: absolute;
-   top: 55%;
-   left: 65%;
-   transform: translate(-50%, -50%);
-   -ms-transform: translate(-50%, -50%);
-   background-color: rgba(0, 0, 0, 0);
-   color: #FEFFFF;
-   font-size: 27px;
-   padding: 30px 30px;
-   border: 2px solid #FEFFFF;
-   cursor: pointer;
-   border-radius: 5px;
-   text-align: center;
-   width: 200px;
+.align-center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 85%
 }
-.main-container .resume-btn {
-  position: absolute;
-   top: 55%;
-   left: 40%;
-   transform: translate(-50%, -50%);
-   -ms-transform: translate(-50%, -50%);
-   background-color: rgba(0, 0, 0, 0);
-   color: #FEFFFF;
-   font-size: 27px;
-   padding: 30px 30px;
-   border: 2px solid #FEFFFF;
-   cursor: pointer;
-   border-radius: 5px;
-   text-align: center;
-   width: 200px;
+.controls{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.main-container h1 {
-  text-align: center;
-  font-size: 5vw;
-  font-weight: 900;
-  color: #FEFFFF;
+.controls button{
+  font-size: 1.25vw;
 }
-
-/*Profile*/
-#profile-card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 40%;
-    margin: auto;
-    text-align: center;
-    border: solid;
-}
-#profile-title {
-    color: ;
-    font-size: 20px;
-}
-.fa-instagram {
-    font-size: 30px;
-    padding-right: 40px;
-}
-.fa-twitter {
-    font-size: 30px;
-    padding-right: 40px;
-}
-.fa-linkedin-in {
-    font-size: 30px;
-    padding-right: 40px;
-}
-button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 10px;
-    color: #2B7A78;
-    background-color: #17252A;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-}
-a {
-    text-decoration: none;
-    font-size: 22px;
-    color: black;
-}
-button:hover, a:hover {
-    opactiy: 0, 7;
-}
-
-/*Card*/
-#card {
-    margin-left: 80px;
-    padding-bottom: 20px;
-}
-
-/*Skill Bar*/
-* {box-sizing: border-box}
-.container {
-    width: 60%;
-    background-color: #ddd;
-}
-#skill-bar {
-    display: flex;
-    flex-direction: column;
-}
-.skills {
-    text-align: right;
-    padding-right: 20px;
-    line-height: 40px;
-    color: white;
-}
-.html {width: 70%; background-color: #198adf;}
-.css {width: 60%; background-color: #544fbd;}
-.js {width: 30%; background-color: #fd2c21;}
-
-#card ul li {
-    font-size: 18px;
-    margin-left: -20px;
-}
-/*@media only screen and (min-device-width:) and (max-device-width:) and (max-device-height:) and (orientation:) {
-}*/
