--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ body{
 
 /*Buttons*/
 
-button {
+.button {
    background-color: rgba(0, 0, 0, .25);
    color: #FFFFFF;
    font-size: 2vw;
@@ -88,6 +88,16 @@ button {
    border-radius: 5px;
    text-align: center;
    width: 15vw;
+   -webkit-appearance: button;
+   -moz-appearance: button;
+   appearance: button;
+   display: flex;
+   flex-direction: wrap;
+   align-items: center;
+   height: 100px;
+   text-align: center;
+   text-decoration: none;
+   color: initial;
 }
 .main-container h1 {
   text-align: center;
