--- a/main.css
+++ b/main.css
@@ -66,14 +66,11 @@ body{
   font-size: 45px;
   border: 5px solid #FEFFFF;
   border-radius: 5px;
-
 }
 
 /*Buttons*/
-
 .button {
-  display: flex;
-  flex-direction: row;
+  display: grid;
   padding: 5%;
   font-size: 2vw;
   text-align: center;
@@ -89,15 +86,20 @@ body{
    align-items: center;
    height: 100px;
    width: auto;
-   color: initial;
+   color: white;
 }
 .under-header{
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-column-gap: 30px;
   grid-template-rows: 1fr 1fr;
   align-items: center;
   justify-content: center;
   margin-top: 5%;
+}
+.col2{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10%;
 }
 .main-container h1 {
   text-align: center;
@@ -172,9 +174,4 @@ button:hover, a:hover {
 #card ul li {
     font-size: 18px;
     margin-left: -20px;
-}
-.col2{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 2%;
 }
