--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@ body{
   text-align: center;
    background-color: rgba(0, 0, 0, .25);
    color: #FFFFFF;
-   border: 2px solid #FEFFFF;
+   border: 5px solid #FEFFFF;
    cursor: pointer;
    border-radius: 5px;
    width: 15vw;
@@ -95,6 +95,7 @@ body{
   align-items: center;
   justify-content: center;
   margin-top: 5%;
+  margin-bottom: -8%;
 }
 .col2{
   display: grid;
@@ -121,21 +122,27 @@ body{
     font-size: 20px;
 }
 .fa-instagram {
-    font-size: 30px;
+    font-size: 80px;
     padding-right: 40px;
+    padding-top: 40px;
 }
 .fa-twitter {
-    font-size: 30px;
+    font-size: 80px;
     padding-right: 40px;
 }
-.fa-linkedin-in {
-    font-size: 30px;
+.fa-linkedin {
+    font-size: 80px;
     padding-right: 40px;
 }
 a {
     text-decoration: none;
     font-size: 22px;
     color: black;
+}
+button {
+  width: 900px;
+  height: 60px;
+  font-size: 40px;
 }
 button:hover, a:hover {
     opactiy: 0, 7;
@@ -145,6 +152,12 @@ button:hover, a:hover {
 #card {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 2% 5%;
+}
+#card h1 {
+  font-size: 50px;
+}
+#card p {
+  font-size: 20px;
 }
 
 /*Skill Bar*/
@@ -167,11 +180,30 @@ button:hover, a:hover {
     line-height: 40px;
     color: white;
 }
-.html {width: 70%; background-color: #198adf;}
-.css {width: 60%; background-color: #544fbd;}
-.js {width: 30%; background-color: #fd2c21;}
+.html {width: 70%; font-size: 30px; background-color: #198adf;}
+.css {width: 60%; font-size: 30px; background-color: #544fbd;}
+.js {width: 30%; font-size: 30px; background-color: #fd2c21;}
 
+#profile {
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 2% 5%;
+}
+#hobbies {
+  background-color: rgba(0,0,0,0.5);
+  padding: 2% 5%;
+}
+#hobbies h1 {
+  font-size: 40px;
+}
+#hobbies p {
+  font-size: 30px;
+}
+#hobbies ul li {
+  font-size: 30px;
+  margin-left: -20px;
+}
 #card ul li {
-    font-size: 18px;
+    font-size: 40px;
     margin-left: -20px;
 }
