--- a/main.css
+++ b/main.css
@@ -36,10 +36,28 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5680e9', end
   text-align: center;
   transform: translateY(100%);
 }
+#tabs .active {
+  color: #5AB9EA;
+  text-align: center;
+  padding: 5%;
+  text-decoration: none;
+  font-size: 45px;
+  border: 4px solid #5AB9EA;
+  border-radius: 5px;
+}
 .nav-item a{
   font-size: 2vw;
   text-decoration: none;
   color: #5AB9EA;
+}
+#tabs a:hover{
+  color: #5AB9EA;
+  text-align: center;
+  padding: 5%;
+  text-decoration: none;
+  font-size: 45px;
+  border: 4px solid #5AB9EA;
+  border-radius: 5px
 }
 .main-container{
   width: 100%;
@@ -64,21 +82,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5680e9', end
   background-color: rgba(0, 0, 0, .5);
   background-blend-mode: multiply;
 }
+.header {
+  font-size: 55px;
+}
 .sub-header{
   display: grid;
   grid-template-columns: 1fr 1fr;
   font-size: 2vw;
 }
 
-#tabs .active {
-  color: #5AB9EA;
-  text-align: center;
-  padding: 5%;
-  text-decoration: none;
-  font-size: 45px;
-  border: 5px solid #5AB9EA;
-  border-radius: 5px;
-}
 
 /*Buttons*/
 .button {
@@ -211,18 +223,23 @@ button:hover, a:hover {
 }
 #hobbies h1 {
   font-size: 40px;
-  text-align: left;
+  text-align: center;
 }
 #hobbies p {
   font-size: 30px;
 }
 #hobbies ul li {
   font-size: 30px;
-  margin-left: -20px;
+  margin-left: 40px;
   text-align: left;
 }
 .about {
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-gap: 10px;
+}
+.about img {
+  width: 100px;
+  height: 100px;
+  margin-left: 70px;
 }
