--- a/main.css
+++ b/main.css
@@ -35,13 +35,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5680e9', end
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
   transform: translateY(100%);
+  border: 2px solid black;
+  /*padding-bottom: 50px;
+  padding-top: 10px;*/
+  margin-bottom: auto;
 }
 #tabs .active {
   color: #5AB9EA;
   text-align: center;
   padding: 5%;
   text-decoration: none;
-  font-size: 45px;
+  font-size: 2vw;
   border: 4px solid #5AB9EA;
   border-radius: 5px;
 }
